Fixed overflow issue

--- a/src/components/Question/styled.module.scss
+++ b/src/components/Question/styled.module.scss
@@ -33,6 +33,7 @@
     font-family: 'Inter';
     font-size: 1.4rem;
     line-height: 2em;
+    overflow: hidden;
 }
 
 @media (max-width: 40rem) {
